layout issue fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,9 +46,10 @@ body {
   text-align: center;
 }
 
-.load-more-btn {
+.colored-btn{
   background-color: rgb(7, 121, 144) !important;
-  width: 15% !important;
+  font-size: 12px !important;
+  text-transform: uppercase;
   margin: auto;
 }
 
@@ -72,7 +73,8 @@ body {
 }
 
 .bg-red {
-  background-color: red;
+  background-color: red !important;
+  border: none !important;
 }
 
 .white-btn {
@@ -143,4 +145,7 @@ body {
   border-bottom: 1px solid #d2d2d2;
   padding-top: 10px;
   padding-bottom: 10px;
+}
+.address-box:hover{
+  color: white !important;
 }
